--- a/css/styles.css
+++ b/css/styles.css
@@ -37,4 +37,28 @@ header{
     background-color: var(--violeta); /* para probar */
 }
 
+
+/* sección galeria imagenes  */
+.gallery-title {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-left: -2em;
+}
+
+.text-block {
+    font-size: 1rem;
+    line-height: 1.5;
+}
+.image-placeholder {
+    background-color: #e9ecef;
+    border: 1px solid #dee2e6;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    text-align: center;
+    object-fit: cover;
     
+}
+.image-placeholder span {
+    color: #6c757d;
+}
