--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    scroll-behavior: smooth;
+    scroll-behavior: smooth;  
 }
 
 body{
@@ -36,7 +36,81 @@ img {
 header{
     height: 100vh;
     background-color: var(--violeta); /* para probar */
+    margin-left: -3em;
 }
+
+/* MENÚ */
+
+.navbar{
+    transform: rotate(90deg);  
+    background-color: var(--amarillo)!important;
+    --bs-navbar-hover-color: var(--rosa);
+    transform-origin: right;
+    top: 0;
+    transform-origin: 10vh 10vh;
+    height: 8vh;
+    width: 100vh;
+}
+
+.navbar-brand{
+    color: var(--verde);
+    /* transition: 0.5s; */
+    font-size: 4vh;
+    font-weight: 700;
+    margin-left: 1em;
+    transform: rotate(180deg);
+}
+
+.navbar-brand:hover{
+    transform: scale(1.1);
+    color: var(--rosa)!important;
+}
+
+.nav-item {
+    margin: 0em 1.5em;
+}
+
+
+.nav-item a{
+    color: var(--negro);
+    transform: rotate(180deg);
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.dropdown-menu{
+    background-color:var(--amarillo) ;
+}
+
+.dropdown-item {
+    width: auto;
+}
+
+.navbar-expand-lg .navbar-collapse {
+    justify-content: flex-end;
+}
+.navbar-nav{
+ margin-right: 0 !important;
+}
+ /* para botón activo  */
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+    color: var(--rosa);
+  
+}
+/* para q al boton estar activo se quede la linea */
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show::before{
+    width: 100%;
+}
+
+.navbar-toggler {
+    border: 1px solid var(--rosa);
+    color: transparent;
+}
+
+.fa-bars{
+    color:var(--rosa);
+} 
+
 
 
 /* sección galeria imagenes  */
@@ -170,3 +244,100 @@ header{
     font-weight: 900;
 }
 /* sección galeria imagenes FINAL */
+
+
+#particles-js {
+    margin: 1em 0;
+    position: relative;
+    height: 50vh;
+    background-color: var(--amarillo);
+}
+
+#particles-js h3 {
+    color: var(--naranja);
+    font-size: 7vh;
+    font-weight: 900;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+
+footer {
+    background-color: var(--rosa);
+    height: 30em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer h1 {
+    font-size: 10vh;
+    font-weight: bold;
+    color: var(--negro);
+}
+
+
+footer .iconos {
+    display: flex;
+    flex-direction: row;
+}
+
+footer .iconos a {
+    color: var(--negro);
+    padding: 2em;
+}
+
+footer .iconos a:hover {
+    color: var(--verde);
+    padding: 2em;
+}
+
+footer .datos {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 60%;
+    justify-content: space-evenly;
+    margin-top: 2em;
+}
+
+footer .legal {
+    color: var(--negro);
+    margin: 1em;
+    border-right: 1px solid var(--negro);
+
+}
+
+footer .legal p {
+    color: var(--negro);
+    font-size: 12px;
+    margin: 1em 3em 1em 1em;
+}
+
+footer .legal p:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+footer .copy {
+    color: var(--negro);
+    padding: 1em;
+}
+
+@media screen and (max-width: 1030px) {
+
+        .gallery-item2, .gallery-item3, .gallery-item4 {
+           width: 40vh;
+           height: 40vh;
+        }
+
+       .gallery-item5{
+        width: 10%;
+        height: 10%;
+       }
+    }
