--- a/css/styles.css
+++ b/css/styles.css
@@ -52,15 +52,13 @@ header{
     background-color: var(--gris)!important;
     --bs-navbar-hover-color: var(--rosa);
     transform-origin: right;
-    top: 1;
+    top: 0;
     border: 1px solid var(--negro);
     margin: 1em;
     border-radius: 80px;
     /* transform-origin: 10vh 10vh;
     transform: rotate(90deg);    */
 }
-
-
 
 .navbar-brand{
     color: var(--verde);
@@ -294,29 +292,50 @@ header{
 /* sección galeria imagenes FINAL */
 
 
+/* PARTICLES */
 #particles-js {
-    margin: 1em 0;
+    margin: 2em 5em 0em 5em;
+    margin-bottom: 10vw;
     position: relative;
-    height: 50vh;
-    background-color: var(--amarillo);
+    height: 70vh;
+    background-color: var(--violeta);
+    border-radius: 50%;
+}
+
+#particles-js .jeje {
+    padding: 10em ;
 }
 
 #particles-js h3 {
-    color: var(--naranja);
-    font-size: 7vh;
-    font-weight: 900;
+    color: var(--verde);
+    font-size: 6vh;
+    font-weight: 800;
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.btn{
+    background-color: var(--violeta);
+    border:var(--verde) 1px solid;
+    color: var(--verde);
+    border-radius: 100%;
+}
+
+.btn:hover{
+    background-color: var(--verde);
+    border:var(--verde) 1px solid;
+    color: var(--gris);
+}
+
 
 
 
 footer {
     background-color: var(--rosa);
-    height: 30em;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -327,17 +346,19 @@ footer h1 {
     font-size: 10vh;
     font-weight: bold;
     color: var(--negro);
+    margin: 1em;
 }
 
 
 footer .iconos {
     display: flex;
     flex-direction: row;
+    transform: scale(1.5);
 }
 
 footer .iconos a {
     color: var(--negro);
-    padding: 2em;
+    padding: 1.2em;
 }
 
 footer .iconos a:hover {
@@ -378,10 +399,18 @@ footer .copy {
 }
 
 @media screen and (max-width: 1030px) {
+    s
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(1){
+        display: none;
+    }
+
+    .item5-texto h2{
+        display: none;
+    }
     
     .gallery-item2 img{
-        width: 125vh;
-        margin-left: -10em;
+        width: 118vh;
+        margin-left: -1em;
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p{
@@ -390,35 +419,41 @@ footer .copy {
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(2){
-        width: 45vh;
-        height: 30vh;
-        margin-left: 15em;
-        margin-top: -7em;
+            width: 55vh;
+            height: 31vh;
+            margin-left: 11em;
+            margin-top: -8em;
     }
 
-    #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1){
-        margin-top: -3em;
-    }
     .item4-title h1 {
-        margin-left: 3.9em;
+        margin-left: 3.5em;
         width: 40vh;
-        margin-top: -3em;
+        margin-top: -2.5em;
+        font-size: 10vh;
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(1){
         margin-top: 1em;
         height: 43vh;
+        margin-left: -3em;
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
-        margin-left: 2em; 
-        margin-top: -2em;
+        margin-left: 3em;
+        margin-top: 2em;
+        margin-right: 14em;
     }
 
     .gallery-item5{
         display: flex;
         flex-direction: row-reverse;
         height: 30vh;
+    }
+
+    .gallery-item5 img {
+        width: 34vh;
+        margin-top: -15em;
+        height: 70vh;
     }
 
     .item5-imgTT {
@@ -428,9 +463,21 @@ footer .copy {
         display: flex;
         flex-direction: row-reverse;
     }
+
+    .item5-imgTT .item5-title h1 {
+        font-size: 11vh;
+        width: 68vh;
+        text-align: right;
+        margin-top: 0.5em;
+        margin-right: -1.5em;
+        position: relative;
+    }
+
     #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p{
-        width: 71vh;
-        margin-top: -9.2em;
+        width: 68vh;
+        margin-top: -5.2em;
+        text-align: right;
+        margin-left: -2em;
     }
     #gallery > div > div.row > div.gallery-item5.col > div.item5-texto {
         max-width: 0vh;
@@ -450,24 +497,51 @@ footer .copy {
     }
 }
 
+@media screen and (max-width: 990px){
+
+    .item5-texto h2{
+        display: none;
+    }
+    .gallery-item2 img{
+        width: 103vh;
+        margin-left: -4.9em;
+    }   
+}
+
 @media screen and (max-width: 850px){
   
     .gallery-item2 img{
-        width: 120vh;
-        margin-left: -8.9em;
+        width: 103vh;
+        margin-left: -4.9em;
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(2){
-        width: 51vh;
-        height: 27vh;
+        display: none;
     }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(1){
+        display: none;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
+            /* margin-left: 0em; */
+            margin-top: 1em;
+            margin-right: 16em;
+        }
+
+        footer{
+            height: 100vh;
+        }
 }
 
 @media screen and (max-width: 750px){
      
+    .item5-imgTT{
+        margin-top: -16em;
+    }
 
     .gallery-item2 img{
-        width: 97vh;
+        width: 90vh;
         margin-left: -11em;
     }
 
@@ -491,6 +565,7 @@ footer .copy {
         margin-left: 4.3em;
         height: 20vh;
         font-size: 8vh;
+        width: 29vh;
     }
 
     #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p{
@@ -516,9 +591,12 @@ footer .copy {
         margin-left: 2em;
     }
     #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p {
-        width: 53vh;
-        margin-top: -5.5em;
-        margin-left: 7em;
+        width: 51vh;
+        margin-top: -0.5em;
+        margin-left: 20em;
+    }
+    footer{
+        height: 100vh;
     }
 }
 
@@ -527,6 +605,10 @@ footer .copy {
     /* body{
         background-color: rgb(252, 235, 235);
     } COLOR MONOOOO*/
+
+    #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1){
+        margin-bottom: -2em;
+    }
 
     .gallery-item2 img{
         width: 75vh;
@@ -567,10 +649,167 @@ footer .copy {
     }
 
     #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p {
-        
-        margin-top: -3.5em;
-        margin-left: 9em;
-         font-size: 2.5VH;
+        margin-top: 0.5em;
+        margin-left: 19em;
+        font-size: 2.5VH;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
+        width: 8em;
+    }
+
+    .gallery-item5 {
+        height: 12vh;
+    }
+
+    footer .datos {
+        width: 94%;
+        height: 47%;
+    }
+
+    footer .datos p {
+        font-size: 0.7em;
     }
 
 }   
+
+@media screen and (max-width: 500px){
+
+    .gallery-item3 img {
+        display: none;
+    }
+    .gallery-item2 img {
+        width: 68vh;
+        margin-left: -6.2em;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div:nth-child(1) > p {
+        font-size: 2.2vh;
+        margin-left: 3em;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
+        margin-top: -12em;
+    }
+
+    .gallery-item5 img {
+        margin-top: -8em;
+        margin-left: -17em;
+    }
+
+    .item4-title h1{
+        display: none;
+    }
+
+    .item5-imgTT .item5-title h1 {
+        width: 26vh;
+        margin-top: -2.5em;
+        text-align: left;
+        margin-right: 2.5em;
+    }
+
+    #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p {
+        margin-top: -0.5em;
+        margin-left: 25em;
+        font-size: 2.2vh;
+        width: 43vh;
+        text-align: right;
+    }
+
+    .gallery-item5 img {
+        display: none;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1) {
+       margin-left: 1em;
+    }
+
+    .gallery-item5 {
+        height: 0vh;
+    }
+
+    footer h1 {
+        font-size: 2em;
+    }
+
+    footer .datos {
+        width: 100%;
+        height: 50%;
+    }
+
+    footer .datos p {
+        font-size: 0.7em;
+    }
+
+    #particles-js .jeje {
+        padding: 5em ;
+    }
+
+    #particles-js h3 {
+        color: var(--verde);
+        font-size: 4vh;
+    }
+    #particles-js{
+        height: 50vh;
+    }
+}
+
+@media screen and (max-width: 450px){
+    .gallery-item2 img {
+        width: 54vh;
+        margin-left: -6.2em;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(2) {
+        display: none;
+    }
+    .item5-imgTT .item5-title h1 {
+        width: 26vh;
+        margin-top: 1.5em;
+        text-align: right;
+        margin-right: 4em;
+        font-size: 5.5vh;
+    }
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-imgs > img:nth-child(1) {
+        margin-top: -2em;
+    }
+
+    #gallery > div > div.row > div.gallery-item4.col > div.item4-img3 > img:nth-child(1){
+        display:block;
+    }
+
+    #gallery > div > div.row > div.gallery-item5.col > div:nth-child(1) > div:nth-child(2) > p {
+        margin-top: 5.5em;
+        width: 62vh;
+    }
+    .gallery-item5 {
+        height: 6vh;
+    }
+
+    .item5-texto h2{
+        display: block;
+        display: block;
+        margin-left: 14.1em;
+        width: 31vh;
+        margin-top: -11em;
+    }
+
+    footer{
+        height: 120vh;
+    }
+
+    footer .datos {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    footer .iconos a{
+        padding: 0.5em;
+    }
+
+    footer .legal{
+        border: none;
+    }
+}
